--- a/waybar/theme.css
+++ b/waybar/theme.css
@@ -37,7 +37,7 @@ br - border
 
 @define-color fullTr                #202628;
 @define-color goodTr                #202628;
-@define-color normTr                #191926;
+@define-color normTr                #1b1b28;
 @define-color warningTr             #28262a;
 @define-color criticalTr            #281d29;
 @define-color chargingTr            #21252f;
